# OpenGLClass2

./: .gitignore  CMakeLists.txt  README.md  README.org  example_glfw_opengl3  gears  gears.cpp  lighting.org
.cache/clangd/index/: Camera.cpp.4DF48EAE6A69B9B2.idx  Camera.h.323308EFB4CF39EE.idx  IBO.cpp.708C3A7DB0D5D07E.idx  IBO.h.DFEF2240C046A0FD.idx  Material.cpp.A366F22B9B10824B.idx  Material.h.72C46CEBC240F2E6.idx  Shader.cpp.93E5A0CC60CF7F97.idx  Shader.h.0E0BA81A2BF94069.idx  TriangleMesh.cpp.8DD1BD72F381378B.idx  TriangleMesh.h.D7390DB089FBCCEB.idx  VAO.cpp.A4FEA93280780539.idx  VAO.h.7C2E2767B819C29C.idx  VBO.cpp.1773B034C788B65A.idx  VBO.h.E1C5B6A6711DF7FC.idx  config.cpp.7B308905A6E4D613.idx  config.h.8887EADC8F5BDFCB.idx  disp_tex.cpp.F81810B035777933.idx  glad.c.4FC4A5682DFA76AF.idx  glad.h.1382FE7270C0CDFB.idx  khrplatform.h.88955704B391CC2F.idx  main.cpp.F5F1E556C7B4CEE7.idx  shaderToy.cpp.C1169791A566B2D5.idx  stb_image.h.4005F30AAC2922E5.idx
include/glad/: glad.h
include/imgui/: imgui.cpp
src/: #Model.cpp#  #shaderToy.cpp#  .#Model.cpp  .#shaderToy.cpp  Camera.cpp  Camera.h  FontManager.cpp  FontManager.h  IBO.cpp  IBO.h  Material.cpp  Material.h  Model.cpp  Model.h  Primitive.cpp  Primitive.h  Shader.cpp  Shader.h  Sphere.cpp  Sphere.h  State.cpp  State.h  TextEditorApp.cpp  TextEditorApp.h  TextEditorBuffer.cpp  TextEditorBuffer.h  TextureBrowser.cpp  TextureBrowser.h  TriangleMesh.cpp  TriangleMesh.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  config.cpp  config.h  disp_tex.cpp  glad.c  lighting.org  main.cpp  (+9 more)
src/ex/: camera.cpp  piramid.cpp  shaderToy.cpp
src/shaders/: #light.vert#  .#light.vert  default.frag  default.vert  disp_tex.frag  disp_tex.vert  fragment.shader  light.frag  light.vert  new.frag  phong.frag  plane.frag  plane.vert  shadertoy.frag  shadertoy.vert  vertex.shader
src/shaders/old/: fragment.shader  vertex.shader
src/shaders/toy/: circles2.frag  lines2d.frag  raytracer.frag  shroom.frag
src/test/: tris  tris.cpp
